Refactored map, added interface